# provable-contracts

./: .clippy.toml  .gitignore  .pmat-metrics.toml  .pmat-work.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  book.toml  deny.toml  proof-status.json
.cargo/: config.toml
.pmat/: coverage-cache.json  project.toml
.pmat-metrics/: commit-01dfff7-meta.json  commit-05193b6-meta.json  commit-0569744-meta.json  commit-073afaa-meta.json  commit-15c80d5-meta.json  commit-163909e-meta.json  commit-17122f1-meta.json  commit-18546a3-meta.json  commit-1dae3f6-meta.json  commit-1df23ca-meta.json  commit-219e748-meta.json  commit-23215db-meta.json  commit-24023ce-meta.json  commit-2546ce6-meta.json  commit-32cf359-meta.json  commit-404e79e-meta.json  commit-47283a0-meta.json  commit-5baba84-meta.json  commit-5bfa862-meta.json  commit-631ad23-meta.json  commit-67d026c-meta.json  commit-6cc83cf-meta.json  commit-6cf87c4-meta.json  commit-6e6f6ec-meta.json  commit-7280fe5-meta.json  commit-81a0c3a-meta.json  commit-8b38e8c-meta.json  commit-918d428-meta.json  commit-9236373-meta.json  commit-9356b18-meta.json  commit-9622740-meta.json  commit-9e7ef6c-meta.json  commit-9f6296a-meta.json  commit-a314520-meta.json  commit-ad41dc0-meta.json  commit-aff9f32-meta.json  commit-b22d38d-meta.json  commit-bc0321f-meta.json  commit-bc79a98-meta.json  commit-bcdc5ab-meta.json  (+13 more)
.pmat-tickets/: DEBT-COV-20260221083955.yaml  DEBT-COV-20260221144646.yaml  DEBT-SIZE-20260221083955.yaml  DEBT-SIZE-20260221144646.yaml
.pmat-work/: ledger.jsonl
book/src/: SUMMARY.md  (+20 more)
contracts/: absolute-position-v1.yaml  activation-kernel-v1.yaml  active-learning-v1.yaml  adamw-kernel-v1.yaml  alibi-kernel-v1.yaml  architecture-requirements-v1.yaml  arima-v1.yaml  attention-kernel-v1.yaml  attention-scaling-v1.yaml  backend-dispatch-v1.yaml  batchnorm-kernel-v1.yaml  bayesian-v1.yaml  bias-add-v1.yaml  calibration-v1.yaml  cma-es-kernel-v1.yaml  conv1d-kernel-v1.yaml  cross-entropy-kernel-v1.yaml  decision-tree-v1.yaml  drift-detection-v1.yaml  dropout-v1.yaml  embedding-algebra-v1.yaml  embedding-lookup-v1.yaml  f16-conversion-v1.yaml  flash-attention-v1.yaml  format-parity-v1.yaml  gated-delta-net-v1.yaml  gbm-v1.yaml  gelu-kernel-v1.yaml  glm-v1.yaml  gnn-v1.yaml  gqa-kernel-v1.yaml  graph-centrality-v1.yaml  hybrid-layer-dispatch-v1.yaml  ica-v1.yaml  inference-pipeline-v1.yaml  kernel-launch-budget-v1.yaml  kmeans-kernel-v1.yaml  kv-cache-equivalence-v1.yaml  kv-cache-sizing-v1.yaml  layernorm-kernel-v1.yaml  (+47 more)
crates/provable-contracts/: Cargo.toml
crates/provable-contracts-cli/: Cargo.toml
crates/provable-contracts-cli/src/: main.rs
crates/provable-contracts-cli/src/commands/: audit.rs  book.rs  coverage.rs  diff.rs  equations.rs  generate.rs  graph.rs  kani.rs  lean.rs  lean_status.rs  mod.rs  probar.rs  proof_status.rs  scaffold.rs  status.rs  validate.rs
crates/provable-contracts-cli/tests/: book_coverage.rs  cli_integration.rs  ground_truth.rs
crates/provable-contracts-cli/tests/fixtures/: clamp-kernel-v1.yaml  dot-kernel-v1.yaml  l2norm-kernel-v1.yaml  relu-kernel-v1.yaml  scale-kernel-v1.yaml
crates/provable-contracts-cli/tests/fixtures/expected/: clamp-asm.txt  clamp-latex.txt  clamp-ptx.txt  clamp-text.txt  dot-asm.txt  dot-latex.txt  dot-ptx.txt  dot-text.txt  l2norm-asm.txt  l2norm-latex.txt  l2norm-ptx.txt  l2norm-text.txt  relu-asm.txt  relu-latex.txt  relu-ptx.txt  relu-text.txt  scale-asm.txt  scale-latex.txt  scale-ptx.txt  scale-text.txt
crates/provable-contracts-cli/tests/includes/: cli_binary1.rs  cli_binary2.rs  ground_truth_golden.rs  ground_truth_provability.rs
crates/provable-contracts-macros/: Cargo.toml
crates/provable-contracts-macros/src/: lib.rs
crates/provable-contracts/examples/: audit.rs  codegen.rs  lean_codegen.rs  lean_status.rs  pipeline.rs  scaffold.rs  validate.rs
crates/provable-contracts/proptest-regressions/kernels/: layernorm.txt  rmsnorm.txt  softmax.txt
crates/provable-contracts/src/: binding.rs  build_helper.rs  coverage.rs  diff.rs  diff_tests.rs  error.rs  generate.rs  graph.rs  latex.rs  lib.rs  proof_status.rs  proof_status_tests.rs
crates/provable-contracts/src/audit/: mod.rs  mod_tests.rs
crates/provable-contracts/src/book_gen/: mod.rs  page.rs  summary.rs
crates/provable-contracts/src/kani_gen/: mod.rs  strategies.rs
crates/provable-contracts/src/kernels/: absolute_position.rs  activation.rs  activation_ptx.rs  adamw.rs  adamw_ptx.rs  alibi.rs  attention.rs  attention_ptx.rs  batchnorm.rs  batchnorm_ptx.rs  batchnorm_tests.rs  batchnorm_tests2.rs  bias_add.rs  cma_es.rs  conv1d.rs  cross_entropy.rs  cross_entropy_ptx.rs  dropout.rs  embedding.rs  f16_convert.rs  flash_attention.rs  flash_attention_ptx.rs  flash_attention_tests.rs  gated_delta_net.rs  gelu.rs  gqa.rs  gqa_ptx.rs  kani_proofs.rs  kani_proofs_ab.rs  kani_proofs_cd.rs  kani_proofs_e1.rs  kani_proofs_e2.rs  kmeans.rs  layernorm.rs  layernorm_ptx.rs  lbfgs.rs  linear.rs  matmul.rs  matmul_ptx.rs  mod.rs  (+12 more)
crates/provable-contracts/src/lean_gen/: mod.rs
crates/provable-contracts/src/probar_gen/: mod.rs  patterns.rs  wired.rs  wired_tests1.rs  wired_tests2.rs
crates/provable-contracts/src/scaffold/: mod.rs
crates/provable-contracts/src/schema/: mod.rs  parser.rs  types.rs  validator.rs
crates/provable-contracts/tests/: falsify_activation_gated.rs  falsify_cross_kernel.rs  falsify_matrix_attention.rs  falsify_normalization.proptest-regressions  falsify_normalization.rs  falsify_optimizer_sequence.rs  kani_harness_generation.rs  probar_test_generation.rs  validate_contracts.rs
crates/provable-contracts/tests/common/: mod.rs
crates/provable-contracts/tests/includes/: falsify_actgate_act_silu.rs  falsify_actgate_swi_ce_rope.rs  falsify_cross_isolation.rs  falsify_cross_mutation1.rs  falsify_cross_mutation2.rs  falsify_matatt_gqa_flash.rs  falsify_matatt_matmul_att.rs  falsify_norm_ln_bn.rs  falsify_norm_sm_rms.rs  falsify_optseq_adamw_conv.rs  falsify_optseq_cma_gdn.rs  falsify_optseq_pagerank_lbfgs.rs  falsify_optseq_ssm_kmeans.rs
lean/: lakefile.lean
(+284 files in other folders)
