[workspace]
resolver = "2"
members = [
    "crates/provable-contracts",
    "crates/provable-contracts-cli",
    "crates/provable-contracts-macros",
]
exclude = [
    "target",
    "*.profraw",
    "*.profdata",
    ".pmat",
    ".vscode",
    ".idea",
    "proptest-regressions",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["PAIML Engineering"]
license = "MIT"
repository = "https://github.com/paiml/provable-contracts"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
format_push_string = "allow"

[workspace.dependencies]
provable-contracts = { path = "crates/provable-contracts" }
provable-contracts-macros = { path = "crates/provable-contracts-macros" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
