[package]
name = "provable-contracts-cli"
description = "CLI for provable-contracts — validate, scaffold, verify, status, audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pv"
path = "src/main.rs"

[dependencies]
provable-contracts = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
