[package]
name = "provable-contracts-cli"
description = "CLI for provable-contracts — validate, scaffold, verify, status, audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pv"
path = "src/main.rs"

[dependencies]
provable-contracts = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
