[package]
name = "provable-contracts"
description = "Papers to Math to Contracts in Code — YAML contract parsing, validation, scaffold generation, and Kani harness codegen for provable Rust kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["verification", "formal-methods", "kani", "contracts", "ml-kernels"]
categories = ["development-tools::testing", "mathematics"]
exclude = ["tests/", "benches/"]

[features]
default = []
kani = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints]
workspace = true
